--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "currency-converter",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -10,13 +10,31 @@
   },
   "dependencies": {
     "expo": "~54.0.23",
+    "expo-constants": "~18.0.10",
+    "expo-linking": "~8.0.8",
+    "expo-router": "~6.0.14",
     "expo-status-bar": "~3.0.8",
+    "nativewind": "^4.2.1",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-native": "0.81.5",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.22.9",
+    "@babel/plugin-transform-private-methods": "^7.22.5",
     "@types/react": "~19.1.0",
+    "babel-preset-expo": "~54.0.0",
+    "react-native-worklets": "0.5.1",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.9.2"
   },
-  "private": true
+  "private": true,
+  "expo": {
+    "web": {
+      "bundler": "metro"
+    }
+  }
 }
