--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.9",
     "expo": "~54.0.23",
     "expo-constants": "~18.0.10",
     "expo-linking": "~8.0.8",
